force-app/main/default/objects/ReportNameSetting__c/ReportNameSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>帳票名設定</label>
</CustomObject>