force-app/main/default/objects/ReportNameSetting__c/fields/ApprovalContact_NewMatter__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContact_NewMatter__c</fullName>
    <label>承認後連絡_新規</label>
    <length>255</length>
    <type>Text</type>
</CustomField>