force-app/main/default/objects/ReportNameSetting__c/fields/ConditionConfirmationAutomatic__c.field-meta.xml
<CustomField>
    <fullName>ConditionConfirmationAutomatic__c</fullName>
    <label>条件確認書自動送付</label>
    <length>255</length>
    <type>Text</type>
</CustomField>