force-app/main/default/objects/ReportNameSetting__c/fields/MediationRequest__c.field-meta.xml
<CustomField>
    <fullName>MediationRequest__c</fullName>
    <label>斡旋依頼通知</label>
    <length>255</length>
    <type>Text</type>
</CustomField>