force-app/main/default/objects/ReportNameSetting__c/fields/ReturnReminderContractRenewal__c.field-meta.xml
<CustomField>
    <fullName>ReturnReminderContractRenewal__c</fullName>
    <label>返送締結書類督促(更新)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>